[package]
name = "sp-consensus-beefy-etf"
version = "13.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Primitives for BEEFY protocol."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { optional = true, features = ["alloc", "derive"], workspace = true }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-application-crypto = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-crypto-hashing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-mmr-primitives = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
# sp-keystore = { package = "sp-keystore-etf", path = "../../keystore-etf", default-features = false }
strum = { version = "0.24.1", features = ["derive"], default-features = false }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
array-bytes = "6.1"
w3f-bls = { version = "0.1.3", features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"dep:lazy_static",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-crypto-hashing/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-mmr-primitives/std",
	"sp-runtime/std",
	"strum/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]

# This feature adds BLS crypto primitives. It should not be used in production since
# the BLS implementation and interface may still be subject to significant change.
bls-experimental = [
	"sp-application-crypto/bls-experimental",
	"sp-core/bls-experimental",
]
