[package]
name = "sc-consensus-beefy-etf-rpc"
version = "13.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
description = "RPC for the BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
futures = "0.3.21"
jsonrpsee = { version = "0.22", features = ["client-core", "macros", "server"] }
log = { workspace = true, default-features = true }
parking_lot = "0.12.1"
serde = { features = ["derive"], workspace = true, default-features = true }
thiserror = { workspace = true }
sc-consensus-beefy-etf = { path = "..", features = ["bls-experimental"] }
sp-consensus-beefy-etf = { path = "../../../../primitives/consensus/beefy-etf", features = ["bls-experimental"] }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }

[dev-dependencies]
serde_json = { workspace = true, default-features = true }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", features = ["test-helpers"] }
substrate-test-runtime-client = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
tokio = { version = "1.22.0", features = ["macros"] }
