[package]
name = "drand-example-node"
description = "An example node implementing the Drand pallet."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
quote = "1.0.37"
futures = { version = "0.3.31", features = ["thread-pool"] }
serde_json = { version = "1.0.133", default-features = true }
jsonrpsee = { version = "0.24.7", features = ["server"] }

# substrate client
sc-cli = "0.47.0"
sp-core.workspace = true
sc-executor = "0.40.1"
sc-network = "0.45.1"
sc-service = "0.46.0"
sc-telemetry = "25.0.0"
sc-transaction-pool = "37.0.0"
sc-transaction-pool-api = "37.0.0"
sc-offchain = "40.0.0"
sc-consensus-aura = "0.45.0"
sp-consensus-aura.workspace = true
sc-consensus = "0.44.0"
sc-consensus-grandpa = "0.30.0"
sp-consensus-grandpa.workspace = true
sc-client-api = "37.0.0"
sc-rpc-api = "0.44.0"
sc-basic-authorship = "0.45.0"

# substrate primitives
sp-wasm-interface = "21.0.1"
sp-runtime.workspace = true
sp-io = "38.0.0"
sp-timestamp = "34.0.0"
sp-inherents.workspace = true
sp-keyring = "39.0.0"
sp-api.workspace = true
sp-blockchain = "37.0.1"
sp-block-builder.workspace = true
sp-crypto-ec-utils = { version = "0.14.0",  features = ["bls12-381"]}
sp-keystore = "0.40.0"

# frame and pallets
frame-system.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc = "41.0.0"
substrate-frame-rpc-system = "39.0.0"

# These dependencies are used for runtime benchmarking
frame-benchmarking.workspace = true
frame-benchmarking-cli = "43.0.0"

# Local Dependencies
drand-example-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = ["std"]
std = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"drand-example-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"drand-example-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
